[gd_scene load_steps=6 format=3 uid="uid://cyangrc80ocx0"]

[ext_resource type="Script" uid="uid://b5xib3hlmhcj6" path="res://src/game_controller.gd" id="1_7gr0a"]
[ext_resource type="PackedScene" uid="uid://dbimrathn2fh0" path="res://assets/transition_controller/transition_controller.tscn" id="2_7jkri"]
[ext_resource type="PackedScene" uid="uid://b0wa83bgodgj8" path="res://assets/main_menu/main_menu.tscn" id="2_n5odd"]
[ext_resource type="Script" uid="uid://374sxn7c2v6m" path="res://src/transition_settings.gd" id="4_8aus6"]
[ext_resource type="Resource" uid="uid://butcpdqm55m1r" path="res://assets/transition_controller/transitions/main_menu_to_game.tres" id="5_iojdx"]

[node name="GameController" type="Node"]
script = ExtResource("1_7gr0a")

[node name="World2D" type="Node2D" parent="."]

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MainMenu" parent="GUI" instance=ExtResource("2_n5odd")]
unique_name_in_owner = true
layout_mode = 1

[node name="TransitionController" parent="." instance=ExtResource("2_7jkri")]
transition_settings = Array[ExtResource("4_8aus6")]([ExtResource("5_iojdx")])
